<resources>
    <string name="app_name">UFDL Image Classification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER-FRIENDLY DEEP LEARNING</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_capture">CAPTURE</string>
    <string name="menu_manage">MANAGE</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="fragment_images">IMAGES</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="URL">URL</string>
    <string name="darkMode">DARK MODE</string>
    <string name="add_dataset">Add Dataset</string>
    <string name="add_image">Add Image From Gallery</string>

    <string name="license_prompt">Choose a license</string>

    <string-array name="license_array">
    </string-array>

    <!-- Context Menu for Image Management -->
    <string name="Delete">Delete</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="edit_label">Edit Label</string>
    <string name="search">Search</string>
    <string name="Copy">Copy</string>
    <string name="application_url">https://waikato-ufdl.github.io/</string>
    <string name="Download">Download</string>
    <string name="editDataset">Edit Details</string>
    <string name="framework">Framework:</string>
    <string name="model">Model:</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="login">Login</string>
    <string name="select_all_loaded_images">Select all loaded images</string>
    <string name="dataset">Dataset:</string>
    <string name="use_predicted_label">Use predicted label</string>
    <string name="enter_classification_label">Enter Classification Label</string>
    <string name="image_label">Image Label:</string>
    <string name="please_classify_the_image_and_select_a_dataset_to_store_the_image">Please classify the image and select a dataset to store the image:</string>
    <string name="labelSelect">Label</string>
    <string name="probability">Probability</string>
    <string name="please_select_a_model_and_the_minimum_confidence_score_required_for_the_classifier_to_reclassify_the_image">Please select a model and the minimum confidence score required for the classifier to reclassify the image.</string>
    <string name="minimum_confidence">Minimum Confidence:</string>
    <string name="enter_a_decimal_between_0_1">Enter a decimal between 0 – 1</string>
    <string name="dataset_name_header">DATASET NAME</string>
    <string name="project">Project</string>
    <string name="tag_s">Tag(s)</string>
    <string name="folder">Folder</string>
    <string name="captured_image">Captured Image</string>
    <string name="save_button">save button</string>
    <string name="datasetimage">datasetImage</string>
    <string name="classification_label">Classification label</string>
    <string name="label_all_images_with_this_category">Label all images with this category</string>
    <string name="save_images">Save Images</string>
    <string name="dataset_name">Dataset Name</string>
    <string name="description_header">DESCRIPTION</string>
    <string name="dataset_description">Dataset Description</string>
    <string name="project_header">PROJECT</string>
    <string name="tags">Tags</string>
    <string name="tags_header">TAGS (OPTIONAL)</string>
    <string name="SwitchName">PUBLIC</string>
    <string name="create_dataset">CREATE DATASET</string>
    <string name="index">Index</string>
    <string name="auto_classify">Auto Classify</string>
    <string name="license">License</string>
    <string name="license_header">LICENSE</string>
    <string name="cancel_download">Cancel Download</string>


    <string-array name="model_frameworks" translatable="false">
        <item>PyTorch Mobile</item>
        <item>TensorFlow Lite</item>
    </string-array>

</resources>