<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all_loaded_images"
        android:icon="@drawable/ic_baseline_select_all_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_relabel"
        android:title="@string/edit_label"
        android:icon="@drawable/edit_icon"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_classify"
        android:title="@string/auto_classify"
        android:icon="@drawable/ic_baseline_analytics_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/Delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always" />
</menu>