<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:viewBindingIgnore="true">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/labelViewPager"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"/>

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/spring_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dampingRatio="0.5"
        app:dotsColor="@color/colorPrimary"
        app:dotsStrokeColor="@color/red_btn_bg_pressed_color"
        app:dotsCornerRadius="20dp"
        app:dotsSize="16dp"
        app:dotsSpacing="6dp"
        app:dotsStrokeWidth="2dp"
        app:stiffness="300"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:layout_below = "@id/labelViewPager" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spring_dots_indicator">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_label"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>


    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_design"
        android:layout_below="@id/labelCategory"
        android:padding="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textColor="?attr/textColor"
        android:hint="@string/classification_label"
        android:textColorHint="@color/grey"
        android:autofillHints="@string/classification_label" />

    <CheckBox
        android:id="@+id/labelCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_all_images_with_this_category"
        android:layout_below="@id/editTextCategory"
        android:layout_marginStart="25dp"
        android:textColor="?attr/textColor"
        android:paddingStart="10dp"
        android:buttonTint="@color/colorAccent"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/saveImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/save_images"
        android:layout_below="@id/labelCheckBox"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>